[aliases]
dists = clean --all sdist bdist_wheel

[metadata]
name = molecule-opennebula
url = https://github.com/peterloeffler/molecule-opennebula
project_urls =
    Bug Tracker = https://github.com/peterloeffler/molecule-opennebula/issues
    Release Management = https://github.com/peterloeffler/molecule-opennebula/releases
    CI = https://github.com/peterloeffler/molecule-opennebula/actions

    Source Code = https://github.com/peterloeffler/molecule-opennebula
description = OpenNebula Molecule Plugin :: run molecule tests on OpenNebula
long_description = file: README.md
author = Peter Löffler
author_email = peter.loeffler@guruz.at
maintainer = Peter Löffler
maintainer_email = peter.loeffler@guruz.at
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: System :: Systems Administration
    Topic :: Utilities

keywords =
    ansible
    roles
    testing
    molecule
    plugin
    opennebula

[options]
use_scm_version = True
python_requires = >=3.6
packages = find:
include_package_data = True
zip_safe = False

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0
    setuptools_scm_git_archive >= 1.0

# These are required in actual runtime:
install_requires =
    # molecule plugins are not allowed to mention Ansible as a direct dependency
    molecule >= 3.2.0a0

[options.extras_require]
test =
    molecule[ansible,test]

[options.entry_points]
molecule.driver =
    opennebula = molecule_opennebula.driver:OpenNebula

[options.packages.find]
where = .
